sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:1: error: ':' expected but ',' found.
def plusLong(J1,J2,base) : Int = {
               ^NaiveBaseball:24: error: identifier expected but '}' found.
}
^