sort.baseball.NaiveBaseball.scala.code
def plusLong(J1,J2,base) : Int = {
  var d1 : Int = (base - J1)%GetNombreBases()
  var d2 : Int = (base - J2)%GetNombreBases()
  if (d1>d2) {return(0)}
  else {return(1)}
}


override def run() {
  while(!estTrie()){
    var trouBase : Int = getTrouBase()
    var trouPos : Int = getTrouPosition()
    var source : Int = (trouBase-1)%getNombreBases()
    var couleurJ1 : Int = getCouleurJoueur(source,0)
    var couleurJ2 : Int = getCouleurJoueur(source,1)
    deplace(source,plusLong(couleurJ1,couleurJ2,trouBase))
    
    
    
  }
}